syntax = "proto3";
option optimize_for = SPEED;
option java_package = "com.yifan.demo.protobuf2";
option java_outer_classname = "MyDataInfo";

message  MyMessage {
  enum  DataType {
    StudentType = 0; //编号从0开始
    WorkType = 1;
  }

  // 用data_type 来标识传的是哪一个枚举类型
  DataType data_type = 1;

  //表示每次只能出现其中的一个
  oneof  dataBody {
    Student student = 2;
    Worker worker = 3;
  }

}

message Student {
  int32 id = 1;
  string name = 2;
}

message Worker {
  string name = 1;
  int32 age = 2;
}